--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -21,7 +21,7 @@
         {% endif %}
       </h1>
       {% include page__meta.html type=include.type %}
-      {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>{% endif %}
+      {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html }}</p>{% endif %}
     </div>
     {% if teaser %}
     <div class="archive__item-teaser">
