--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -20,7 +20,7 @@
         <a href="{{ post.url | relative_url }}" rel="permalink">{{ title }}</a>
         {% endif %}
       </h1>
-      {% include page__meta.html type=include.type %}
+      {% include page__meta.html %}
       {% if post.excerpt %}<p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html }}</p>{% endif %}
     </div>
     {% if teaser %}
