--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,6 +144,16 @@ li.active a {
   color: $link-color !important;
 }
 
+.masthead {
+  text-transform: uppercase;
+}
+
+.page__title {
+  margin: 2em 0 1em 0;
+  padding: 0 0 1em 0;
+  border-bottom: $border !important;
+}
+
 .page__content a {
   text-decoration: underline !important;
 }
@@ -225,10 +235,8 @@ blockquote {
 // Kill Elements ----------------------------- //
 
 .archive__subtitle,
-.archive h1#page-title,
 .skip-links,
-.page__meta i,
-.masthead > * {
+.page__meta i {
   display: none !important;
 }
 
@@ -493,43 +501,6 @@ h2.archive__item-title:first-of-type {
   }
 }
 
-.grid__item {
-  margin-bottom: 2em;
-
-  @include breakpoint($small) {
-    float: left;
-    width: span(5 of 10);
-
-    &:nth-child(2n + 1) {
-      clear: both;
-      margin-left: 0;
-    }
-
-    &:nth-child(2n + 2) {
-      clear: none;
-      margin-left: gutter(of 10);
-    }
-    .archive__item-teaser {
-      @include breakpoint($small) {
-        max-height: 200px;
-      }
-
-      @include breakpoint($medium) {
-        max-height: 400px;
-      }
-    }
-  }
-
-  .archive__item-title {
-    margin-top: 0.5em;
-    font-size: $type-size-2;
-  }
-
-  .archive__item-excerpt {
-    display: none;
-  }
-}
-
 .archive__item-excerpt {
   font-size: inherit;
 }
@@ -657,3 +628,65 @@ footer.page__meta {
 }
 
 // End Post ----------------------------- //
+
+// Portfolio ----------------------------- //
+
+.entries-grid {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  gap: 2em; /* Adjusts the space between items */
+  // justify-content: flex-start;
+
+}
+
+.portfolio-item {
+  flex: 0 0 calc(25% - 2em);
+  position: relative;
+  margin-bottom: 1em;
+  * {
+    font-size: $type-size-4 !important;
+    text-transform: uppercase;
+  }
+  a:hover {
+    * {
+    color: $text-color !important;
+    }
+    img {
+    border-color: $primary-color !important;
+    }
+  }
+  .portfolio-header {
+    margin: 0 0 1em 0 !important;
+    .portfolio-year {
+      border: $border !important;
+      padding: 0.25em 0.5em;
+      font-weight: 200;
+    }
+    .portfolio-title {
+      display: inline;
+      font-weight: 700;
+    }
+  }
+  .portfolio-thumbnail {
+    display: flex;
+    width: 100%;
+    aspect-ratio: 1 / 1; /* Ensures the element is square */
+    overflow: hidden;
+    img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+  }
+  .portfolio-tags {
+    border: $border !important;
+    border-top: none !important;
+    padding: 0.75em !important;
+    .portfolio-tag {
+      color: $meta-color !important;
+      border: $border !important;
+      font-size: $type-size-5 !important;
+      padding: 0.25em 0.5em;
+    }
+  }
+}
