--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -607,6 +607,10 @@ header .tags {
   border-bottom: $border !important;
 }
 
+a.continue {
+  color: $primary-color !important;
+}
+
 footer.page__meta {
   border-top: none !important;
 }
