--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -563,7 +563,10 @@ h2.archive__item-title:first-of-type {
   img {
     display: block;
     margin: 0 auto;
+    max-width:100%;
     max-height: 30em !important;
+    width: auto;
+    height: auto;
     @include breakpoint($medium) {
       max-height: inherit !important;
     }
