Added photo to g3 post

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -196,6 +196,7 @@ ul li::marker {
 .current {
   background-color: transparent !important;
   border: $border !important;
+  color: $accent-01 !important;
 }
 
 figcaption {
